# rust_learn

./: .gitignore  README.md
00 Basics/: 01_variables_and_mutability.rs  02_data_types_scalar_and_compound.rs  03_functions_and_scope.rs  04_control_flow.rs  05_ownership_and_borrowing.rs  08_enums_and_pattern_matching.rs  09_common_collections.rs  10_modules_and_packages.rs  11_error_handling.rs  12_generics.rs  13_traits_and_trait_bounds.rs  14_lifetimes.rs  15_standard_library_and_macros.rs  16_async_await.rs  17_closures.rs  18_iterators_advanced.rs  20_result_advanced.rs  21_ownership_move_clone_drop.rs  22_borrow_splitting_and_reborrowing.rs  26_trait_static_dispatch.rs  27_trait_objects_dyn_dispatch.rs  28_associated_types_and_operator_overloading.rs  29_object_safety_and_orphan_rule.rs  30_send_sync_trait_objects.rs  31_error_design_for_libraries.rs  32_application_error_handling.rs  33_error_context_and_sources.rs  34_recoverable_error_patterns.rs  35_panic_unwrap_expect_boundaries.rs
02 Async_Programming/: Cargo.toml
03 Practical_Topics/: Cargo.toml  README.md
03 Practical_Topics/src/: main.rs
04 Testing_Debugging/: Cargo.toml  README.md
04 Testing_Debugging/src/: calculator.rs  lib.rs  main.rs  parser.rs  store.rs
04 Testing_Debugging/tests/: integration_flow.rs  panic_and_result_tests.rs
04 Testing_Debugging/tests/common/: mod.rs
05 Smart_Pointers_Interior_Mutability/: Cargo.toml  README.md
06 Advanced_Concurrency/: Cargo.toml  README.md
07 Macros_Proc_Macros/: Cargo.toml  README.md
Cargo_Project_Organization/: Cargo.toml  README.md
(+26 files in other folders)
