[package]
name = "testing_debugging"
version = "0.1.0"
edition = "2021"
description = "Learning examples for Rust testing and debugging"
license = "MIT OR Apache-2.0"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
